<resources>
    <string name="app_name">RUCafe</string>
    <string name="title_activity_order_donut_quantity">OrderDonutQuantityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="donut">Donut</string>
    <string name="coffee">Coffee</string>

    <string name="subtotal">Subtotal:</string>
    <string name="salestax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="size">Size:</string>
    <string name="quantity">Quantity:</string>
    <string name="yourOrder">Current Order:</string>
    <string name="storeOrders">Store Orders:</string>
    <string name="placeOrder">Place Order</string>
    <string name="addToOrder">Add to Order</string>

    <string name="addIns">Add-Ins:</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="whipped">Whipped Cream</string>
    <string name="shorti">Short</string>
    <string name="tall">Tall</string>
    <string name="grande">Grande</string>
    <string name="venti">Venti</string>

    <string name="donutNameHere">donut_name_here</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="no_items">No Items Ordered</string>
    <string name="no_orders">No Orders Placed</string>
    <string name="order_no">Order Number:</string>

    <string name="donut_order_message">Are you sure you would like to order this Donut(s)?"</string>
    <string name="coffee_order_message">Are you sure you would like to order this Coffee(s)?"</string>
    <string name="user_order_message">Are you sure you would like place this order?"</string>

    <string name="added_to_order_coffee">Coffee added to Order!</string>
    <string name="added_to_order_donut">Donut added to Order!</string>
    <string name="placed_order">Order Placed!</string>

    <string name="item_remove_message">Are you sure you would like to remove this item?"</string>
    <string name="item_removed">Item Removed"</string>
    <string name="order_empty">Order Cannot Be Placed: Order Empty"</string>
    <string name="order_remove_message">Are you sure you would like to cancel this Order?"</string>
    <string name="order_removed">Order Cancelled"</string>



</resources>