<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderCoffeeActivity" android:background="#CFBD9F">
    <ImageView
            android:layout_width="344dp"
            android:layout_height="204dp" app:srcCompat="@drawable/coffee" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" android:contentDescription="@string/coffee"
            app:layout_constraintHorizontal_bias="0.434" android:translationZ="10dp"/>
    <CheckBox
            android:text="@string/caramel"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/caramelBox"
            app:layout_constraintTop_toBottomOf="@+id/sugarBox" app:layout_constraintStart_toStartOf="@+id/sugarBox"
            android:buttonTint="#F6F3EE" android:textSize="16sp" android:onClick="checkCaramel"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/syrupBox"
            app:layout_constraintStart_toStartOf="@+id/sugarBox"
            android:buttonTint="#F6F3EE" android:textSize="16sp" android:onClick="checkSyrup"
            app:layout_constraintTop_toBottomOf="@+id/caramelBox"/>
    <CheckBox
            android:text="@string/cream"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/creamBox"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginStart="40dp" android:buttonTint="#F6F3EE"
            android:textSize="16sp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="20dp" android:onClick="checkCream"/>
    <CheckBox
            android:text="@string/sugar"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/sugarBox"
            app:layout_constraintTop_toTopOf="@+id/creamBox" app:layout_constraintStart_toEndOf="@+id/creamBox"
            android:layout_marginStart="20dp" android:buttonTint="#F6F3EE" android:textSize="16sp"
            android:onClick="checkSugar"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/milkBox"
            app:layout_constraintTop_toBottomOf="@+id/creamBox" app:layout_constraintStart_toStartOf="@+id/creamBox"
            android:buttonTint="#F6F3EE" android:textSize="16sp" android:onClick="checkMilk"/>
    <CheckBox
            android:text="@string/whipped"
            android:layout_width="128dp"
            android:layout_height="57dp" android:id="@+id/whippedBox"
            app:layout_constraintTop_toBottomOf="@+id/milkBox" app:layout_constraintStart_toStartOf="@+id/milkBox"
            android:buttonTint="#F6F3EE" android:textSize="16sp" android:onClick="checkWhipped"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="351dp"
            android:layout_height="72dp"
            app:layout_constraintTop_toBottomOf="@+id/sizeSpinner"
            android:id="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:boxBackgroundColor="#F3ECE2"
            android:background="@drawable/button_shape"
            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.38"
            android:backgroundTint="#F1ECE4" android:translationZ="6dp" android:paddingTop="3dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/subtotal" android:background="@drawable/button_shape"
                android:textStyle="bold"
                android:layout_marginTop="16dp" android:editable="false" android:id="@+id/subtotalBoxCoffee"
                android:textColorHighlight="#766139" android:textColorLink="#675532" android:clickable="false"
                android:backgroundTint="#F1ECE4" android:paddingStart="10dp" android:paddingTop="-3dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/addIns"
            android:layout_width="106dp"
            android:layout_height="31dp" android:id="@+id/AddInsText"
            app:layout_constraintStart_toStartOf="@+id/creamBox" android:textSize="20sp" android:textStyle="bold"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/creamBox" android:layout_marginBottom="44dp"/>
    <Spinner
            android:layout_width="234dp"
            android:layout_height="53dp" android:id="@+id/sizeSpinner"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@+id/whippedBox"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            android:entries="@array/sizeArray" android:backgroundTint="#F1ECE4" android:translationZ="6dp"
            android:popupBackground="@drawable/button_shape"/>
    <Spinner
            android:layout_width="88dp"
            android:layout_height="53dp" android:id="@+id/quantitySpinnerCoffee"
            android:background="@drawable/button_shape"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toEndOf="@+id/sizeSpinner" app:layout_constraintTop_toTopOf="@+id/sizeSpinner"
            android:entries="@array/quantityArray" android:scrollbarStyle="insideInset"
            android:backgroundTint="#F1ECE4" android:translationZ="6dp"
            android:popupBackground="@drawable/button_shape"/>
    <TextView
            android:text="@string/quantity"
            android:layout_width="109dp"
            android:layout_height="27dp" android:id="@+id/quantityTextCoffee"
            app:layout_constraintStart_toStartOf="@+id/quantitySpinnerCoffee" android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sizeSpinner" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/sizeText"/>
    <TextView
            android:text="@string/size"
            android:layout_width="109dp"
            android:layout_height="27dp" android:id="@+id/sizeText"
            app:layout_constraintStart_toStartOf="@+id/sizeSpinner" android:textSize="20sp" android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sizeSpinner" android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/addToOrder"
            android:layout_width="257dp"
            android:layout_height="70dp" android:id="@+id/addToOrderButtonCoffee"
            android:textSize="18sp" android:onClick="addToOrder"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout" android:layout_marginTop="8dp"
            android:background="@drawable/button_shape" android:backgroundTint="#E8E6E6" android:translationZ="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
