<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#698773" android:foregroundTint="#FFFFFF">
    <Button
            android:layout_width="350dp"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.488"
            android:background="@drawable/donuts" android:id="@+id/orderDonutsButton"
            android:onClick="orderDonut" android:contentDescription="@string/donut"
            android:translationZ="6dp" android:shadowRadius="10"/>
    <Button
            android:layout_width="350dp"
            android:layout_height="220dp"
            app:layout_constraintTop_toBottomOf="@+id/orderDonutsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/coffee"
            android:id="@+id/orderCoffeeButton" android:onClick="orderCoffee" android:layout_marginTop="16dp"
            android:contentDescription="@string/coffee" android:translationZ="6dp" android:shadowRadius="10"
            app:layout_constraintHorizontal_bias="0.488"/>
    <ImageButton
            android:layout_width="170dp"
            android:layout_height="164dp" app:srcCompat="@drawable/cart" android:id="@+id/userOrdersButton"
            android:scaleType="centerInside" app:layout_constraintStart_toStartOf="@+id/orderCoffeeButton"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton"
            android:layout_marginTop="16dp" android:background="@drawable/button_shape" android:tint="#000000"
            android:onClick="checkUserOrders" android:contentDescription="@string/yourOrder"
            android:backgroundTint="#7C9882" android:translationZ="6dp"/>
    <ImageButton
            android:layout_width="170dp"
            android:layout_height="164dp" app:srcCompat="@drawable/recipt" android:id="@+id/StoreOrdersButton"
            android:scaleType="centerInside" app:layout_constraintEnd_toEndOf="@+id/orderCoffeeButton"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton" android:layout_marginTop="16dp"
            android:background="@drawable/button_shape" android:onClick="checkStoreOrders"
            android:contentDescription="@string/storeOrders" android:backgroundTint="#7C9882"
            android:translationZ="6dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>