<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderDonutQuantityActivity" android:background="#D6A1A1">
    <TextView
            android:text="@string/quantity"
            android:layout_width="109dp"
            android:layout_height="27dp" android:id="@+id/quantityText"
            app:layout_constraintStart_toStartOf="@+id/quantitySpinnerDonut" android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/quantitySpinnerDonut"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/donutNameHere"
            android:layout_width="wrap_content"
            android:layout_height="52dp" android:id="@+id/donutTypeText"
            android:textSize="25sp" android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/quantitySpinnerDonut"
            android:translationZ="10dp" android:background="@drawable/button_shape" android:backgroundTint="#F5DEDF"
            android:paddingTop="8dp" android:paddingLeft="8dp" android:paddingRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="295dp"
            android:layout_height="67dp"
            app:layout_constraintTop_toBottomOf="@+id/quantitySpinnerDonut"
            android:id="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.545"
            android:layout_marginTop="44dp" android:background="@drawable/button_shape" android:translationZ="10dp"
            android:paddingTop="3dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/subtotal"
                android:textStyle="bold"
                android:editable="false" android:id="@+id/subtotalBoxDonut"
                android:clickable="true" android:backgroundTint="#F1DFDF" android:paddingTop="-3dp"
                android:paddingLeft="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="306dp"
            android:layout_height="218dp" app:srcCompat="@drawable/donuts" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.494"
            android:contentDescription="@string/donut" android:translationZ="10dp"/>
    <Button
            android:text="@string/addToOrder"
            android:layout_width="224dp"
            android:layout_height="78dp" android:id="@+id/AddToOrderButtonDonut"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout" app:layout_constraintHorizontal_bias="0.492"
            android:onClick="addToOrder" android:background="@drawable/button_shape" android:backgroundTint="#EDE9E9"
            android:translationZ="10dp"/>
    <Spinner
            android:layout_width="69dp"
            android:layout_height="52dp" android:id="@+id/quantitySpinnerDonut"
            android:background="@drawable/button_shape"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="76dp"
            android:entries="@array/quantityArray" android:backgroundTint="#F1DFDF" android:translationZ="10dp"
            app:layout_constraintStart_toEndOf="@+id/donutTypeText" android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>