<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserOrdersActivity">

    <TextView
            android:text="@string/yourOrder"
            android:layout_width="199dp"
            android:layout_height="34dp" android:id="@+id/storeOrderText"
            android:textSize="28sp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:contentDescription="@string/yourOrder"/>
    <ImageView
            android:layout_width="159dp"
            android:layout_height="128dp" app:srcCompat="@drawable/cart" android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderText"
            android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:contentDescription="@string/yourOrder"/>
    <ListView
            android:layout_width="394dp"
            android:layout_height="378dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/itemsList"
            app:layout_constraintHorizontal_bias="1.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/textInputLayout5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subtotal" android:id="@+id/subtotalBoxUser" android:editable="false"
                android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salestax" android:id="@+id/salesTaxBoxUser" android:editable="false"
                android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total" android:id="@+id/totalBoxUser" android:editable="false"
                android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/placeOrder"
            android:layout_width="251dp"
            android:layout_height="69dp" android:id="@+id/button"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/itemsList" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp" android:onClick="placeOrder"
            android:translationZ="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>